--- a/get2work/index.html
+++ b/get2work/index.html
@@ -33,10 +33,10 @@
           Hello! My name is Adonai Villalobos, and I'm thrilled to connect with you. As you delve into this brief introduction, I aim to establish a platform that resonates with your curiosity. This website serves as a conduit, inviting you into the fascinating realm of technology, specifically delving into the intricate world of web design and programming.
         </p>
         <p>
-          ave you ever wondered how to craft your inaugural webpage or the steps pivotal to its creation? Questions like these often pave the way for our exploration. Much like you, I embarked on this journey grappling with identical queries. Even today, I'm continuously navigating through these queries, discovering novel methods to unravel their solutions. It's a journey of perpetual learning, a testament to persistence and evolution.
+          Have you ever wondered how to craft your inaugural webpage or the steps pivotal to its creation? Questions like these often pave the way for our exploration. Much like you, I embarked on this journey grappling with identical queries. Even today, I'm continuously navigating through these queries, discovering novel methods to unravel their solutions. It's a journey of perpetual learning, a testament to persistence and evolution.
         </p>
         <p>
-          his endeavor has been profoundly enriching. Uncovering latent skills and leveraging them to thrive in the technological landscape has been an incredible odyssey. I extend my hand to you as a fellow seeker of knowledge. Let's forge a symbiotic relationship; allow me the privilege to assist you in your quest for understanding. Together, we can embark on this learning expedition, embracing every challenge as an opportunity for growth.
+          This endeavor has been profoundly enriching. Uncovering latent skills and leveraging them to thrive in the technological landscape has been an incredible odyssey. I extend my hand to you as a fellow seeker of knowledge. Let's forge a symbiotic relationship; allow me the privilege to assist you in your quest for understanding. Together, we can embark on this learning expedition, embracing every challenge as an opportunity for growth.
         </p>
       </div>
     </div>
