--- a/get2work/index.html
+++ b/get2work/index.html
@@ -50,8 +50,15 @@
       <div class="vision-text"> 
         <h2>Purpose</h2>
         <p>
-          The vision or reason for this website is to help others learn and understand the world of web development and programming, which can sometimes be challenging. I aim to find different ways to make it an easier path.<br>
-          Even though I'm a beginner in this world, I can offer my visitors the option to have someone who knows what it's like to start from nothing. I'll do my best to learn and put into practice all that I have learned.<br>
+          My purpose for this website is to be a guiding companion for individuals navigating the intricate world of web development and programming. 
+          I recognize the challenges firsthand and aim to pave simpler paths through this domain.
+          As a beginner myself, I offer fellow beginners a companion who understands the starting point intimately.
+          My commitment lies in continuous learning and practical application, ensuring that my journey resonates with yours.
+        </p>
+        <p>
+          For potential employers or those considering hiring a beginner developer, I'm dedicated to showcasing my evolving skills and commitment to growth. 
+          I'm eager to contribute, learn, and grow within a collaborative environment.
+          Your interest in my journey means the world to me, and I'm excited about the opportunity to explore possibilities together.
         </p>
       </div>
     </div>
