--- a/get2work/index.html
+++ b/get2work/index.html
@@ -49,17 +49,16 @@
       </div>
       <div class="vision-text"> 
         <h2>Purpose</h2>
-        <p>
-          My purpose for this website is to be a guiding companion for individuals navigating the intricate world of web development and programming. 
-          I recognize the challenges firsthand and aim to pave simpler paths through this domain.
-          As a beginner myself, I offer fellow beginners a companion who understands the starting point intimately.
-          My commitment lies in continuous learning and practical application, ensuring that my journey resonates with yours.
-        </p>
-        <p>
-          For potential employers or those considering hiring a beginner developer, I'm dedicated to showcasing my evolving skills and commitment to growth. 
-          I'm eager to contribute, learn, and grow within a collaborative environment.
-          Your interest in my journey means the world to me, and I'm excited about the opportunity to explore possibilities together.
-        </p>
+        My purpose for this website is to serve as a guiding companion for individuals stepping into the intricate world of web development and programming. 
+        Recognizing the myriad challenges in this domain, I aspire to illuminate clearer pathways, making this journey less daunting for newcomers.
+        As someone who commenced this journey from scratch, I empathize with beginners and offer a relatable perspective, aiming to simplify complex concepts.
+        My commitment centers on continual learning and practical application, ensuring that my experiences resonate with those starting their odyssey.
+      </p>
+      <p>
+        To prospective employers or those considering hiring a beginner developer, I strive to showcase my burgeoning skills and unyielding dedication to growth.
+        I eagerly seek opportunities to contribute, absorb knowledge, and thrive within a collaborative professional setting.
+        Your interest in my journey serves as a catalyst for my enthusiasm, and I look forward to exploring potential collaborations that foster mutual growth and achievement.
+      </p>
       </div>
     </div>
   </section>
