--- a/get2work/index.html
+++ b/get2work/index.html
@@ -28,6 +28,8 @@
         <img src="images/audience.jpeg" alt="audience">
       </div>
       <div class="audience-text">
+        <div class="title-frame">
+        <h2 class="audience-frame">Audience</h2>
         <p>
           <h2>Audience</h2>
           Hello! My name is Adonai Villalobos, and I'm thrilled to connect with you. As you delve into this brief introduction, I aim to establish a platform that resonates with your curiosity. This website serves as a conduit, inviting you into the fascinating realm of technology, specifically delving into the intricate world of web design and programming.
@@ -40,6 +42,7 @@
         </p>
       </div>
     </div>
+    </div>
   </section>
   <div class="spacer"></div> <!-- White space after the audience section -->
   <section class="vision-section">
@@ -48,7 +51,9 @@
         <img src="images/vision.jpeg" alt="vision / purpose">
       </div>
       <div class="vision-text"> 
-        <h2>Purpose</h2>
+        <div class="title-frame">
+        <h2 class="vision-title">Purpose</h2>
+        <p>
         My purpose for this website is to serve as a guiding companion for individuals stepping into the intricate world of web development and programming. 
         Recognizing the myriad challenges in this domain, I aspire to illuminate clearer pathways, making this journey less daunting for newcomers.
         As someone who commenced this journey from scratch, I empathize with beginners and offer a relatable perspective, aiming to simplify complex concepts.
@@ -60,6 +65,7 @@
         Your interest in my journey serves as a catalyst for my enthusiasm, and I look forward to exploring potential collaborations that foster mutual growth and achievement.
       </p>
       </div>
+    </div>
     </div>
   </section>
   <div class="spacer"></div>
