--- a/get2work/index.html
+++ b/get2work/index.html
@@ -72,10 +72,14 @@
     <h2>Courses</h2>
     <div class="courses-images">
       <div class="course-image">
+        <a href="courses.html">
         <img src="images/html_.png" alt="HTML Course">
+      </a>
       </div>
       <div class="course-image">
+        <a href="courses.html">
         <img src="images/css.png" alt="CSS Course">
+        </a>
       </div>
     </div>
   </section>
