--- a/get2work/index.html
+++ b/get2work/index.html
@@ -100,5 +100,10 @@
           </a>
       </div>
   </footer>
+  <div class="navbar">
+    <a href="index.html" class="active">Home</a>
+    <a href="aboutme.html ">About Me</a>
+    <a href="courses.html">Courses</a>
+  </div>
 </body>
 </html>
