--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -25,6 +25,20 @@
     <div>
       <img src="images/ado_id_.jpeg" alt="my profile picture">
     </div>
+    <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="card">
+  <img src="images/ado_id_.jpeg" alt="Adonai" style="width:100%">
+  <h1>Adonai Villalobos</h1>
+  <p class="title">Entry-Level Web Developer</p>
+  <p>Brigham Young University - Idaho</p>
+  <a href="#"><i class="fa fa-dribbble"></i></a>
+  <a href="#"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-facebook"></i></a>
+  <p><button>Contact</button></p>
+</div>
   </div>
   <main class="content">
     <section class="about-section">
