--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -31,7 +31,7 @@
   <p class="title">Entry-Level Web Developer</p>
   <p>Brigham Young University - Idaho</p>
   <a href="https://www.linkedin.com/in/adonai-villalobos/"><i class="fa fa-linkedin"></i></a>
-  <a href="#"><i class="fa fa-facebook"></i></a>
+  <a href="https://www.facebook.com/adovillalobos/"><i class="fa fa-facebook"></i></a>
   <p><button>Contact</button></p>
 </div>
   </div>
